--- a/Fiche exercice/Recherche.html
+++ b/Fiche exercice/Recherche.html
@@ -125,7 +125,7 @@
     <div style="width: 100%;">
         <div style="height: 30px;"></div>
         <u style="color: white;"><b><h1>
-            Recherche d'exercice Brevet.
+            Recherche de fiches d'exercices.
         </h1></b></u><br>
         <div style="text-align: left; width: 100%; ">
             <table style="width: 100%; padding: 0px;">
