Augmentation et réduction

--- a/Exerciseur/4e/Proportionnalité.html
+++ b/Exerciseur/4e/Proportionnalité.html
@@ -27,6 +27,7 @@
             <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Proportionnalité/Calculer une quatrième proportionnelle')" value="Calculer une quatrième proportionnelle"></li>
             <li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Proportionnalité/Identifier une situation de proportionnalité')" value="Identifier une situation de proportionnalité"></li>
 			<li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Proportionnalité/Pourcentages')" value="Prendre un pourcentage d'un nombre"></li>
+			<li><input class="button" type="button" onclick="HtmlManipulator.SetupExercice('4e/Proportionnalité/Augmentation et réduction')" value="Augmentation et réduction"></li>
         </ul>
         <div style="height: 50px;"></div>
         <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
